--- a/taysir-org/index.html
+++ b/taysir-org/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Exo:400,700|Roboto+Slab:700|Oxygen:400,700|Open+Sans:400,700|Raleway:400,700|Montserrat:400,700|Roboto:400,700|Lato:400,700" rel="stylesheet">
     </head>
     <body>
+        
         <div id="hero">
         <div id="home">
               
@@ -138,7 +139,7 @@
                 </div>
             </div>
         </main>
-      <script>
+      <--! <script>
         window.onscroll = function() {myFunction()};
 
         var navbar = document.getElementById("header");
@@ -150,7 +151,7 @@
           } else {
             navbar.classList.remove("sticky");
           }
-        }
+        } -->
       </script>    
     </body>
 </html>
