--- a/taysir-org/index.html
+++ b/taysir-org/index.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </main>
-      <--! <script>
+      <!-- <script>
         window.onscroll = function() {myFunction()};
 
         var navbar = document.getElementById("header");
@@ -151,7 +151,7 @@
           } else {
             navbar.classList.remove("sticky");
           }
-        } -->
-      </script>    
+        } 
+      </script>   --> 
     </body>
 </html>
